Fix | form spinner postion overlap on mobile spanish

--- a/src/pages/rental/rental.css
+++ b/src/pages/rental/rental.css
@@ -96,7 +96,7 @@
 .form-spinner {
     width: 20px;
     height: 20px;
-    margin-left: 72px;
+    margin-left: 60px;
 }
 
 @media only screen and (max-width: 992px) {
